Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
 <p>This is a simple python wrapper for the <a href="http://netflixroulette.net/api/">Netflix Roulette API</a>.</p>
 
-<p><a href="https://travis-ci.org/tizz98/netflix_roulette"><img src="https://travis-ci.org/tizz98/netflix_roulette.svg?branch=master" alt="Build Status"></a></p>
+<p><a href="https://travis-ci.org/tizz98/netflix_roulette"><img src="https://travis-ci.org/tizz98/netflix_roulette.svg?branch=master" alt="Build Status"></a>
+<a href="https://pypi.python.org/pypi/netflix_roulette"><img src="https://img.shields.io/pypi/v/netflix_roulette.svg" alt="PyPI version"></a>
+<a href="https://pypi.python.org/pypi/netflix_roulette"><img src="https://img.shields.io/pypi/pyversions/netflix_roulette.svg" alt="Python Versions"></a>
+<a href="https://github.com/tizz98/netflix_roulette/blob/master/LICENSE.md"><img src="https://img.shields.io/pypi/l/netflix_roulette.svg" alt="License"></a></p>
 
 <h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
